# twtools

./: CMakeLists.txt  Messages.sh  README.md
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt  sc-apps-twtools.svgz
src/: CMakeLists.txt  main.cpp  org.example.twtools.appdata.xml  org.example.twtools.desktop  twtoolsSettings.kcfg  twtoolsSettings.kcfgc  twtoolsui.rc  twtoolsview.cpp  twtoolsview.h  twtoolsview.ui  twtoolswindow.cpp  twtoolswindow.h
